 * Adding bunch of math functions
	* `getClosestPointOnLine` - useful for finding out distance of a point from a line
	* `getIntersection(line, line)` - for finding intersection of two lines
	* `getIntersection(line, circle)` - for finding intersections between a line and a circle
	* `hasIntersection(line, circle)` - faster check whether line intersects a circle

dgm-lib v2.1.0
 * `dgm::Buffer` has been revamped even further
	* Renamed to `dgm::StaticBuffer`
	* Capacity is now specified in constructor and it cannot be resized
	* Methods were renamed to make sense and not to blindly follow `std`
		* `grow` instead of `expand`
		* `growUnchecked` that grows the container and always result of `getLast`
			* If the buffer is full, it always returns last element
		* `getSize`, `getCapacity`, `getLast`, `isEmpty`, `isFull` instead of `size`, `capacity`, `last`, `empty` and `full`
	* Added trait called `StaticBufferType`
 * Added class `dgm::DynamicBuffer`
	* Has constant time insertion and deletion and stable iterators
	* Doesn't have upper cap on the item count
	* Used by `dgm::SpatialBuffer`, for custom use case prefer using `plf::colony`
 * Added class `dgm::SpatialBuffer`
	* Can perform fast lookups for items based on their position (something like QuadTree, but simpler)
	* Has somewhat constant time insertion and deletion
		* Spatially huge items will take longer than tiny ones
 * `dgm::ps::ParticleSystemInterface` has been revamped
	* `init` method was removed and logic moved to constructor
	* `createParticle` is no longer virtual, instead it wraps call to virtual `createParticleImpl`
 * `dgm::ps::ParticleSystemRenderer`
	* `init` method was removed and logic moved to constructor
	* Texture pointer has been changed to be constant, so it can work with revamped `dgm::ResourceManager`
 * Traits
	* Renamed `IsSmartPtr` to `SmartPtrType`
	* Renamed `IsSfVector` to `SfmlVectorType`
	* Added concept for `TrivialType`, used by `dgm::StaticBuffer` type

dgm-lib v2.0.0